exports[`margin properly applies a value when passed only one 1`] = `
Object {
  "marginBottom": "12px",
  "marginLeft": "12px",
  "marginRight": "12px",
  "marginTop": "12px",
}
`;

exports[`margin properly applies unitless values 1`] = `
Object {
  "margin-bottom": 36,
  "margin-left": 48,
  "margin-right": 24,
  "margin-top": 12,
}
`;

exports[`margin properly applies unitless zero 1`] = `
Object {
  "margin-bottom": 0,
  "margin-left": 0,
  "margin-right": 0,
  "margin-top": 0,
}
`;

exports[`margin properly applies values when passed four 1`] = `
Object {
  "marginBottom": "36px",
  "marginLeft": "48px",
  "marginRight": "24px",
  "marginTop": "12px",
}
`;

exports[`margin properly applies values when passed three 1`] = `
Object {
  "marginBottom": "36px",
  "marginLeft": "24px",
  "marginRight": "24px",
  "marginTop": "12px",
}
`;

exports[`margin properly applies values when passed two 1`] = `
Object {
  "marginBottom": "12px",
  "marginLeft": "24px",
  "marginRight": "24px",
  "marginTop": "12px",
}
`;
